After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785317 - Tab restore functionality-related segfault when opening a non-existent location in a new tab
Tab restore functionality-related segfault when opening a non-existent locati...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-23 16:46 UTC by Ernestas Kulik
Modified: 2017-08-07 11:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stack trace (5.36 KB, text/plain)
2017-07-23 16:46 UTC, Ernestas Kulik
  Details
window-slot: check location before constructing tab restore data (1.58 KB, patch)
2017-07-23 16:57 UTC, Ernestas Kulik
committed Details | Review

Description Ernestas Kulik 2017-07-23 16:46:28 UTC
Created attachment 356234 [details]
stack trace

Reproducible as described in the summary: bookmark a location, delete it and try to open the bookmark in a new tab.
Comment 1 Ernestas Kulik 2017-07-23 16:57:11 UTC
Created attachment 356235 [details] [review]
window-slot: check location before constructing tab restore data

Assuming that the location cannot be null can leads to crashes in cases
when the user is trying to open non-existent locations, e.g. broken
bookmarks.
Comment 2 Carlos Soriano 2017-08-07 10:41:14 UTC
Review of attachment 356235 [details] [review]:

LGTM thanks man!
Comment 3 Ernestas Kulik 2017-08-07 11:07:11 UTC
Attachment 356235 [details] pushed as e5d98fe - window-slot: check location before constructing tab restore data