window-slot: check location before constructing tab restore data

Assuming that the location cannot be null can leads to crashes in cases
when the user is trying to open non-existent locations, e.g. broken
bookmarks.

https://bugzilla.gnome.org/show_bug.cgi?id=785317